--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "framer-motion": "^6",
     "next": "^12.1.5",
     "react": "^18.1.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "truncate-eth-address": "^1.0.2"
   },
   "devDependencies": {
     "@types/node": "^17.0.36",
